# zk-cryptography

./: Cargo.toml  README.md
circuit/: Cargo.toml
circuit/src/: circuit.rs  lib.rs  utils.rs
elliptic-curve/: Cargo.toml  README.md
elliptic-curve/src/: lib.rs  short_weierstras.rs  utils.rs
fiat-shamir-transcript/: Cargo.toml  README.md
fiat-shamir-transcript/src/: fiat_shamir.rs  interface.rs  lib.rs
field/: README.md
field/src/: field.rs  lib.rs  utils.rs
finite-field/: Cargo.toml
finite-field/src/: finite_field.rs  lib.rs
gkr/: Cargo.toml  README.md
gkr/benches/: gkr_benchmark.rs
gkr/src/: circuit.rs  gate.rs  lib.rs  protocol.rs  round_polynomial.rs  succint_protocol.rs  utils.rs  w.rs
kzg/: Cargo.toml
kzg-pcs/: Cargo.toml
kzg-pcs/src/: kzg.rs  lib.rs  protocol.rs  trusted_setup.rs  utils.rs
kzg/benches/: multilinear_kzg_benchmark.rs  univariate_kzg_benchmark.rs
kzg/src/: interface.rs  lib.rs  multilinear_kzg.rs  trusted_setup.rs  univariate_kzg.rs  utils.rs
multilinear-kzg/: Cargo.toml  README.md
multilinear-kzg/benches/: multilinear_kzg_benchmark.rs
multilinear-kzg/src/: interface.rs  kzg.rs  lib.rs  trusted_setup.rs  utils.rs
plonk/: Cargo.toml  README.md
plonk/benches/: plonk_benchmark.rs
plonk/src/: lib.rs  main.rs
plonk/src/compiler/: assembly.rs  domain.rs  mod.rs  primitives.rs  program.rs  utils.rs
plonk/src/protocol/: mod.rs  primitives.rs  prover.rs  transcript.rs  utils.rs  verifier.rs
polynomial/: Cargo.toml  README.md
polynomial/src/: interface.rs  lib.rs  main.rs  multilinear.rs  univariate.rs  utils.rs
polynomial/src/composed/: composed_multilinear.rs  mod.rs  multilinear.rs  multilinear_poly.rs
polynomial/src/multilinear/: coefficient_form.rs  evaluation_form.rs  mod.rs
polynomial/src/univariate/: dense_univariate.rs  domain.rs  evaluation.rs  mod.rs  sparse_univariate.rs  univariate.rs
shamir-secret-sharing/: Cargo.toml  README.md
shamir-secret-sharing/src/: lib.rs  shamir_secret.rs
signature-schemes/: Cargo.toml  README.md
signature-schemes/benches/: rsa_benchmark.rs  schnorr_benchmark.rs
signature-schemes/src/: interface.rs  lib.rs  main.rs  rsa.rs  schnorr.rs  utils.rs
succint-gkr/: Cargo.toml  README.md
succint-gkr/src/: lib.rs  main.rs  succint_gkr.rs  utils.rs
sumcheck/: Cargo.toml  README.md
sumcheck/benches/: composed_sumcheck_benchmark.rs  multi_composed_sumcheck_benchmark.rs  sumcheck_benchmark.rs
sumcheck/src/: lib.rs  main.rs  sumcheck.rs  utils.rs
sumcheck/src/composed/: composed_sumcheck.rs  mod.rs  multi_composed_sumcheck.rs
transcripts/fiat-shamir/: Cargo.toml  README.md
transcripts/fiat-shamir/src/: interface.rs
transcripts/merlin/: Cargo.toml
transcripts/merlin/src/: lib.rs
