[package]
name = "gkr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polynomial.workspace = true
circuit.workspace = true
sumcheck.workspace = true
fiat_shamir.workspace = true
ark-ff.workspace = true
ark-test-curves.workspace = true
kzg.workspace = true
ark-ec.workspace = true
field-tracker.workspace = true

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "gkr_benchmark"
harness = false
