[package]
name = "kzg"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "0.4.2"
ark-ff = "0.4.2"
polynomial = { path = "../polynomial" }
ark-test-curves = {version = "0.4.2", features = ["bls12_381_curve"]}
field-tracker = {git = "https://github.com/sublinearlabs/field-tracker", branch = "main"}
rand = "0.8.5"
ark-bls12-381 = "0.4.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "multilinear_kzg_benchmark"
harness = false
