[package]
name = "kzg"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
polynomial.workspace = true
ark-test-curves.workspace = true
field-tracker.workspace = true

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "multilinear_kzg_benchmark"
harness = false
