[package]
name = "multilinear-kzg"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "0.4.2"
ark-ff = "0.4.2"
polynomial = { path = "../polynomial" }
ark-test-curves = {version = "0.4.2", features = ["bls12_381_curve"]}

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "multilinear_kzg_benchmark"
harness = false
