[package]
name = "polynomial"
version = "0.1.0"
edition = "2021"
authors = ["Abiodun Awoyemi <aabiodunawoyemi@gmail.com>"]
description = "This is a utils library for working with polynomial"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff.workspace = true
num-bigint.workspace = true
num-complex.workspace = true
num-traits.workspace = true
rand.workspace = true
ark-test-curves.workspace = true
field-tracker.workspace = true