[package]
name = "shamir-secret-sharing"
version = "0.1.0"
edition = "2021"
authors = ["Abiodun Awoyemi <aabiodunawoyemi@gmail.com>"]
description = "This is a utils library for working with the Shamir Secret Sharing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polynomial.workspace = true
ark-ff.workspace = true
rand.workspace = true
ark-test-curves.workspace = true
field-tracker.workspace = true
