[package]
name = "signature-schemes"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
rand.workspace = true
ark-serialize.workspace = true
blake2.workspace = true
modinverse.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "schnorr_benchmark"
harness = false

[[bench]]
name = "rsa_benchmark"
harness = false

