[package]
name = "sumcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polynomial = { path = "../polynomial" }
fiat_shamir = { path = "../fiat-shamir-transcript" }
ark-ff = "0.4.2"
ark-test-curves = {version = "0.4.2", features = ["bls12_381_curve"]}
field-tracker = {git = "https://github.com/sublinearlabs/field-tracker", branch = "main"}

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "sumcheck_benchmark"
harness = false

[[bench]]
name = "composed_sumcheck_benchmark"
harness = false

[[bench]]
name = "multi_composed_sumcheck_benchmark"
harness = false