[package]
name = "sumcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polynomial.workspace = true
fiat_shamir.workspace = true
ark-ff.workspace = true
ark-test-curves.workspace = true
field-tracker.workspace = true

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "sumcheck_benchmark"
harness = false

[[bench]]
name = "composed_sumcheck_benchmark"
harness = false

[[bench]]
name = "multi_composed_sumcheck_benchmark"
harness = false